# django-liquid

./: .coveragerc  CHANGES.md  CHANGES.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yaml
django_liquid/: liquid.py
tests/: test_backend.py
